--- a/package.json
+++ b/package.json
@@ -1,60 +1,38 @@
 {
-  "name": "angularJS-to-Angular-Seed",
-  "version": "1.0.0",
-  "description": "QuickStart package.json from the documentation, supplemented with testing support",
+  "name": "angular-js-to-angular-seed",
+  "version": "0.0.0",
   "scripts": {
-    "build": "tsc -p src/",
-    "build:watch": "tsc -p src/ -w",
-    "build:e2e": "tsc -p e2e/",
-    "serve": "lite-server -c=bs-config.json",
-    "serve:e2e": "lite-server -c=bs-config.e2e.json",
-    "prestart": "npm run build",
-    "start": "concurrently \"npm run build:watch\" \"npm run serve\"",
-    "pree2e": "npm run build:e2e",
-    "e2e": "concurrently \"npm run serve:e2e\" \"npm run protractor\" --kill-others --success first",
-    "preprotractor": "webdriver-manager update",
-    "protractor": "protractor protractor.config.js",
-    "pretest": "npm run build",
-    "test": "concurrently \"npm run build:watch\" \"karma start karma.conf.js\"",
-    "pretest:once": "npm run build",
-    "test:once": "karma start karma.conf.js --single-run",
-    "lint": "tslint ./src/**/*.ts -t verbose"
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "watch": "ng build --watch --configuration development",
+    "test": "ng test"
   },
-  "keywords": [],
-  "author": "Alexander Sudarikov",
-  "license": "MIT",
+  "private": true,
   "dependencies": {
-    "@angular/common": "^16.2.5",
-    "@angular/compiler": "^16.2.5",
-    "@angular/core": "^16.2.5",
-    "@angular/forms": "^16.2.5",
-    "@angular/platform-browser": "^16.2.5",
-    "@angular/platform-browser-dynamic": "^16.2.5",
-    "@angular/router": "^16.2.5",
-    "angular-in-memory-web-api": "^0.16.0",
-    "core-js": "^3.32.2",
-    "rxjs": "^7.8.1",
-    "systemjs": "^6.14.2",
-    "systemjs-plugin-babel": "^0.0.25",
-    "zone.js": "^0.13.3"
+    "@angular/animations": "^16.0.0",
+    "@angular/common": "^16.0.0",
+    "@angular/compiler": "^16.0.0",
+    "@angular/core": "^16.0.0",
+    "@angular/forms": "^16.0.0",
+    "@angular/platform-browser": "^16.0.0",
+    "@angular/platform-browser-dynamic": "^16.0.0",
+    "@angular/router": "^16.0.0",
+    "rxjs": "~7.8.0",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@types/jasmine": "^4.3.5",
-    "@types/node": "^20.6.0",
-    "canonical-path": "^1.0.0",
-    "concurrently": "^8.2.1",
-    "eslint": "^8.49.0",
-    "jasmine-core": "^5.1.1",
-    "karma": "^6.4.2",
-    "karma-chrome-launcher": "^3.2.0",
-    "karma-cli": "^2.0.0",
-    "karma-jasmine": "^5.1.0",
-    "karma-jasmine-html-reporter": "^2.1.0",
-    "lite-server": "^2.6.1",
-    "lodash": "^4.17.21",
-    "rimraf": "^5.0.1",
-    "selenium": "^2.20.0",
-    "typescript": "^5.2.2"
-  },
-  "repository": {}
+    "@angular-devkit/build-angular": "^16.0.4",
+    "@angular/cli": "~16.0.4",
+    "@angular/compiler-cli": "^16.0.0",
+    "@types/jasmine": "~4.3.0",
+    "jasmine-core": "~4.6.0",
+    "karma": "~6.4.0",
+    "karma-chrome-launcher": "~3.2.0",
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.0.0",
+    "typescript": "~5.0.2"
+  }
 }
